samples/_failures_safe/1761719763_cf3249_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fef44d2b.c: In function ‘main’:
./samples/SAFE/__tmp_fef44d2b.c:173:5: error: expected declaration or statement at end of input
  173 |     printf("Enter expression to tokenize: ");
      |     ^~~~~~
